# rjmlt

./: .gitignore  FORMAT.md  LICENSE  README.md  pyproject.toml
examples/: rename_preset.py
rjmlt/: __init__.py  checksum.py  cli.py  model.py  schema.py  segments.py  structures.py
tests/: conftest.py  test_checksum.py  test_example1.py  test_roundtrip.py  test_structures.py
tests/data/: configured.rjs  test.rjs
tools/: analyze.py
