[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rjmlt"
version = "0.1.0"
description = "Read and write RJM Mastermind LT .rjs MIDI footswitch settings files"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Thomas Brüggemann" }]
keywords = ["rjm", "mastermind", "midi", "footswitch", "rjs", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/thomasbrueggemann/rjmlt"
Repository = "https://github.com/thomasbrueggemann/rjmlt"

[project.scripts]
rjmlt = "rjmlt.cli:main"

[tool.setuptools]
packages = ["rjmlt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
